[package]
name = "concurrently"
version = "0.3.3"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Run multiple processes concurrently."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tqwewe/concurrently"
categories = ["command-line-utilities"]
keywords = ["tasks", "concurrently", "cli", "parallel"]

[[bin]]
name = "cargo-concurrently"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cargo_toml = "0.15"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
dotenv = "0.15"
futures = "0.3"
humantime-serde = "1.1.1"
indicatif = "0.17.5"
nix = { version = "0.26", default-features = false, features = ["fs", "process", "term"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
toml = "0.7"
